--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Hacker theme
-description: Hacker is a theme for GitHub Pages.
+title: [New Title]
+description: [The titles and descriptions can be changed.]
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-hacker
